Details
-
Bug
-
Status: Resolved
-
Critical
-
Resolution: Fixed
-
0.3.0
-
None
Description
From a non-deterministic test failure in pandas reported to me by jreback, I see that PyArray_SimpleNew calls PyArray_DescrFromType, which returns a reference to a cached dtype: https://github.com/numpy/numpy/blob/1d592c12ca7f9c7f471aa8d20b538c5cb4f2cdce/numpy/core/src/multiarray/arraytypes.c.src#L4403. Since we expect to be able to mutate a datetime64 dtype in libarrow_python, this can cause failures in other code when uses a dtype that we have accidentally mutated internally.
Luckily we are only modifying dtype metadata in a couple of places so this should not be too invasive to fix: https://github.com/apache/arrow/blob/master/cpp/src/arrow/python/pandas_convert.cc#L1995